--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+structopt = "0.3.17"
+reqwest = { version = "0.10.8", features = ["json"] }
+tokio = { version = "0.2.22", features = ["full"] }
+anyhow = "1.0"
