--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ structopt = "0.3.17"
 reqwest = { version = "0.10.8", features = ["json"] }
 tokio = { version = "0.2.22", features = ["full"] }
 anyhow = "1.0"
+dirs = "3.0"
