--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2018"
 
 [dependencies]
 
-structopt = "0.3.17"
+structopt = "0.3"
 reqwest = { version = "0.10.8", features = ["json"] }
 tokio = { version = "0.2.22", features = ["full"] }
 anyhow = "1.0"
 dirs = "3.0"
 url = "2.1"
-daemonize = "0.4"
+job_scheduler = "1.2"
+filetime = "0.2"
+cron = "0.6"
