--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,139 @@
-name: CI
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+
+    tags:
+      - v[0-9]+.*
+      - testing-ci.*
+
+  pull_request:
+
+name: Continuous Integration
 
 jobs:
-  test:
-    name: Test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        build: [stable, beta, nightly]
-        include:
-          - build: stable
-            os: ubuntu-latest
-            rust: stable
-          - build: beta
-            os: ubuntu-latest
-            rust: beta
-          - build: nightly
-            os: ubuntu-latest
-            rust: nightly
+  check:
+    name: Check
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Install Rust (rustup)
-      run: |
-        rustup update ${{ matrix.rust }} --no-self-update
-        rustup default ${{ matrix.rust }}
-    - run: cargo test --verbose
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: check
+
+  test:
+    name: Test Suite
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+
+  fmt:
+    name: Rustfmt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - run: rustup component add rustfmt
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
+
+  clippy:
+    name: Clippy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - run: rustup component add clippy
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: -- -D warnings
+  
+  build-bin: 
+    name: Build-Bin
+    runs-on: ubuntu-latest
+    needs: [check, test, fmt, clippy]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build --release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: binary-latest
+          path: target/release/keysync
+          
+  build-deb: 
+    name: Build-Deb
+    runs-on: ubuntu-latest
+    needs: [check, test, fmt, clippy]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install cargo-deb
+      - name: Build package
+        run: cargo-deb
+      - uses: actions/upload-artifact@v2
+        with:
+          name: debian-latest
+          path: target/debian/*.deb
+          
+  release:
+    name: Publish release
+    needs: [build-bin, build-deb]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download binary artifacts
+      uses: actions/download-artifact@v1
+      with:
+        name: binary-latest
+
+    - name: Download Debian artifacts
+      uses: actions/download-artifact@v1
+      with:
+        name: debian-latest
+
+    - name: Upload assets
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./*-latest/*
+        asset_name: mything
+        tag: ${{ github.ref }}
+        overwrite: true
+        file_glob: true
