--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,12 +80,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: default
+          profile: minimal
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build --release
+      - name: Build Bin
+        run: cargo build --release --all-features
       - uses: actions/upload-artifact@v2
         with:
           name: binary-latest
@@ -99,12 +98,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: default
+          profile: minimal
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install cargo-deb
+      - name: Install cargo-deb
+        run: cargo install cargo-deb
       - name: Build package
         run: cargo-deb
       - uses: actions/upload-artifact@v2
