--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,12 @@ on:
   push:
     branches:
       - main
-
     tags:
       - v[0-9]+.*
       - testing-ci.*
-
   pull_request:
 
-name: Continuous Integration
+name: Continuous Integration / Continous Deployment
 
 jobs:
   check:
@@ -22,13 +20,26 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - run: rustup component add rustfmt
+      - run: rustup component add clippy
       - uses: actions-rs/cargo@v1
         with:
           command: check
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: -- -D warnings
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
 
   test:
-    name: Test Suite
+    name: Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -39,43 +50,12 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-
-  fmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - run: rustup component add rustfmt
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-  clippy:
-    name: Clippy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - run: rustup component add clippy
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: -- -D warnings
   
   build-bin: 
-    name: Build-Bin
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
+    name: Build Bin
     runs-on: ubuntu-latest
-    needs: [check, test, fmt, clippy]
+    needs: [check, test]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -91,9 +71,10 @@ jobs:
           path: target/release/keysync
           
   build-deb: 
-    name: Build-Deb
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
+    name: Build Deb
     runs-on: ubuntu-latest
-    needs: [check, test, fmt, clippy]
+    needs: [check, test]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -111,7 +92,8 @@ jobs:
           path: target/debian/*.deb
           
   release:
-    name: Publish release
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
+    name: Publish Release
     needs: [build-bin, build-deb]
     runs-on: ubuntu-latest
 
@@ -135,3 +117,19 @@ jobs:
         tag: ${{ github.ref }}
         overwrite: true
         file_glob: true
+
+  release-cargo:
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
+    name: Pubish Cargo
+    needs: [check, test]
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Publish
+        run: cargo publish --token {{ secrets.CRATES_TOKEN }}
