--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ It downloads and filters only keys that you don't already have a local copy of. 
 as one time sync when run, or running automatically in the background as a systemd service. You can have the file it \
 updated at a preset interval or a custom cron expression, you can even support multiple users and providers. """
 section = "utility"
-maintainer-scripts = "debian/"
+maintainer-scripts = "contrib/"
 systemd-units = { enable = true }
 
 
