--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "keysync"
 version = "2.0.0"
 authors = ["Ethan Budd <budde25@protonmail.com>"]
 edition = "2018"
-description = "A utility to sync local authorized_keys file updated with your with Github and Gitlab public keys"
+description = "A utility to sync local authorized_keys file updated with your with Github, Gitlab, and Launchpad public keys"
 readme = "README.md"
 license = "GPL-3.0-or-later"
 keywords = ["SSH", "CLI", "utilities", "Github", "keys"]
