--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ nix = "0.19"
 clap = "2.33"
 rusqlite = "0.24"
 rustyline = "7.0"
+regex = "1"
+once_cell = "1.5"
 
 [dev-dependencies]
 proptest = "0.10"
