--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["SSH", "CLI", "utilities", "Github", "keys"]
 categories = ["command-line-utilities"]
 homepage = "https://github.com/budde25/ssh-key-sync"
 repository = "https://github.com/budde25/ssh-key-sync"
+build = "build.rs"
 
 
 [package.metadata.deb]
@@ -43,6 +44,12 @@ rustyline = "7.0"
 regex = "1.4"
 once_cell = "1.5"
 unindent = "0.1"
+
+[build-dependencies]
+clap = "2.33.3"
+nix = "0.19"
+url = "2.2"
+cron = "0.7"
 
 [dev-dependencies]
 proptest = "0.10"
