cleanup github actions

--- a/.github/workflows/continous_deployment.yml
+++ b/.github/workflows/continous_deployment.yml
@@ -2,6 +2,8 @@ on:
   repository_dispatch:
     types: [tag-created]
 
+name: CD
+
 jobs:
   build-bin: 
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
