--- a/.github/workflows/continous_integration.yml
+++ b/.github/workflows/continous_integration.yml
@@ -47,3 +47,11 @@ jobs:
         with:
           command: test
   
+  dispatch:
+    name: Repository dispatch ci passed event
+    needs: [test, check]
+    steps:
+      - uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          event-type: ci-passed
