--- a/.github/workflows/continous_integration.yml
+++ b/.github/workflows/continous_integration.yml
@@ -49,6 +49,7 @@ jobs:
   
   dispatch:
     name: Repository dispatch ci passed event
+    runs-on: ubuntu-latest
     needs: [test, check]
     steps:
       - uses: peter-evans/repository-dispatch@v1
