update licese to MIT/APCHE

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ethan Budd <budde25@protonmail.com>"]
 edition = "2018"
 description = "A utility to sync local authorized_keys file updated with your with Github, Gitlab, and Launchpad public keys"
 readme = "README.md"
-license = "GPL-3.0-or-later"
+license = "MIT OR Apache-2.0"
 keywords = ["SSH", "CLI", "utilities", "Github", "keys"]
 categories = ["command-line-utilities"]
 homepage = "https://github.com/budde25/ssh-key-sync"
