--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -18,6 +18,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: none
+          CUSTOM_TAG: ${{ github.event.client_payload.new_version  }}
       - name: Repository dispatch tag created event
         uses: peter-evans/repository-dispatch@v1
         with:
