--- a/.github/workflows/continous_integration.yml
+++ b/.github/workflows/continous_integration.yml
@@ -53,7 +53,7 @@ jobs:
           command: test
   
   dispatch:
-    if: ${{ github.event.workflow_dispatch }}
+    if: ${{ github.event_name != 'pull_request' }}
     name: Repository dispatch ci passed event
     runs-on: ubuntu-latest
     needs: [test, check]
