--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -17,8 +17,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          DEFAULT_BUMP: none
-          CUSTOM_TAG: ${{ github.event.client_payload.new_version  }}
+          DEFAULT_BUMP: ${{ github.event.client_payload.bump  }}
       - name: Repository dispatch tag created event
         uses: peter-evans/repository-dispatch@v1
         with:
