--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ cron = "0.11.0"
 env_logger = "0.9.0"
 log = "0.4.17"
 nix = "0.24.1"
-clap = "3.1.18"
+clap = { version = "3.1.18", features = ["cargo"] }
 rusqlite = "0.27.0"
 rustyline = "9.1.2"
 regex = "1.5.6"
